[package]
name = "match-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["default", "ws"] }
axum-extra = "0.9.3"
bplustree = "0.1.0"
lazy_static = "1.4.0"
once_cell = "1.19.0"
rust_decimal = "1.35.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
